fixtestsfinal